# agent-cli

./: .gitignore  README.md  agent-cli  agent_cli.py  maxac  mcp_servers.json.example  pyproject.toml  requirements.txt  setup.py
agent_cli/: __init__.py  __main__.py  serve.py
agent_cli/static/: logo_face.avif
