[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxac"
version = "0.1.1"
description = "A one-shot command-line helper with scoped execution tasks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "maxac contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyyaml",
    "streamdown>=0.36",
    "mcp",
]

[project.urls]
Homepage = "https://github.com/day50/maxac"

[project.scripts]
maxac = "agent_cli:main"
ac = "agent_cli:main"

[tool.setuptools.packages.find]
include = ["agent_cli*"]
